# embedded-platform-core

./: .gitignore  .gitmodules  111.json  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  app_core.c  main.c
app/include/: app_context.h  app_core.h  app_events.h
app/selftest/: app_selftest.c  app_selftest.h
app/services/: beep_service.c  beep_service.h  lcd_sleep_service.c  lcd_sleep_service.h  power_board_service.c  power_board_service.h  rtc_service.c  rtc_service.h
app/ui/: app_ui.c  app_ui.h  page_manager.c  page_manager.h
app/ui/pages/: app_pages.h  boot_page.c  boot_page.h  home_page.c  home_page.h  running_page.c  running_page.h  settings_brightness_page.c  settings_cleaning_page.c  settings_common.c  settings_common.h  settings_details_page.c  settings_language_page.c  settings_page.c  settings_page.h  settings_sleep_page.c
cmake/modules/: ep_export_targets.cmake  ep_lvgl_prebuilt.cmake  ep_options.cmake  ep_sources.cmake
cmake/toolchains/: rtos-gcc.cmake
components/config/: CMakeLists.txt
components/config/include/: ep_config.h
components/config/src/: ep_config.c
components/device/: CMakeLists.txt
components/device/include/: ep_device.h
components/device/src/: ep_device.c
components/event/: CMakeLists.txt
components/event/include/: ep_event.h
components/event/src/: ep_event.c
components/file/: CMakeLists.txt
components/file/include/: ep_file.h
components/file/src/: ep_file.c
components/log/: CMakeLists.txt
components/log/include/: ep_log.h
components/log/src/: ep_log.c
components/multi_lang/: CMakeLists.txt
components/multi_lang/include/: multi_lang.h
components/multi_lang/src/: multi_lang.c
components/recipe_parser/: CMakeLists.txt
components/recipe_parser/include/: ep_simple_recipe.h
components/recipe_parser/src/: ep_simple_recipe.c
components/timer/: CMakeLists.txt
components/timer/include/: ep_timer.h
components/timer/src/: ep_timer.c
components/ui/: CMakeLists.txt
components/ui/include/: ep_ui.h
components/ui/src/: ep_ui.c
components/ui_style/: CMakeLists.txt
components/ui_style/include/: ui_style.h
components/ui_style/src/: ui_font_source_han_18.c  ui_font_source_han_20.c  ui_font_source_han_24.c  ui_font_source_han_28.c  ui_font_source_han_32.c  ui_font_source_han_40.c  ui_style.c
config/profiles/: host.cfg
core/: CMakeLists.txt
core/include/: ep_framework.h
core/src/: ep_framework.c
docs/architecture/: project-overview.md  repository-layout.md
docs/development/: github-workflow.md  release-and-packaging.md  roadmap.md  testing-strategy.md
docs/porting/: README.md  app-business-skeleton.md  device-compatibility-reference.md  hal-api-reference.md  ki-141103-480p-smoke-test.md  luban-lite-build-and-link.md  luban-lite-compatibility-overview.md  osal-api-reference.md  platform-bringup-checklist.md  platform-differences.md  rtos-sdk-library-model.md
docs/superpowers/plans/: 2026-05-27-embedded-platform-core-bootstrap.md  2026-05-30-config-component.md  2026-05-30-easylogger-log-backend.md  2026-05-30-framework-event-init.md  2026-05-30-framework-log-init.md  2026-05-30-framework-timer-init.md  2026-05-30-host-event-bus.md  2026-05-30-host-osal-queue.md  2026-05-30-host-osal-semaphore.md  2026-05-30-host-osal-thread-mutex.md  2026-05-30-host-osal-time-mem.md  (+30 more)
hal/: CMakeLists.txt
hal/include/: ep_hal_adc.h  ep_hal_err.h  ep_hal_gpio.h  ep_hal_i2c.h  ep_hal_pwm.h  ep_hal_rtc.h  ep_hal_spi.h  ep_hal_types.h  ep_hal_uart.h
osal/: CMakeLists.txt
osal/include/: ep_osal_err.h  ep_osal_mem.h  ep_osal_mutex.h  ep_osal_queue.h  ep_osal_sem.h  ep_osal_thread.h  ep_osal_time.h  ep_osal_types.h
targets/: artinchip_d121_lubanlite_demo.yaml  artinchip_d121_lubanlite_demo68_mmc.yaml  artinchip_d121_lubanlite_demo68_nand.yaml  artinchip_d121_lubanlite_demo68_nor.yaml  artinchip_d121_lubanlite_hmi_nor.yaml  artinchip_d12x_lubanlite_demo68_mmc.yaml  artinchip_d12x_lubanlite_demo68_nand.yaml  artinchip_d12x_lubanlite_demo68_nor.yaml  artinchip_d12x_lubanlite_hmi_nor.yaml  artinchip_d12x_lubanlite_ki_141103_480p.yaml  host_rtos_demo.yaml
tests/api_contract/: test_config_headers.py  test_device_headers.py  test_event_headers.py  test_file_headers.py  test_hal_headers.py  test_log_headers.py  test_osal_headers.py  test_platform_bootstrap.py  test_platform_capability_headers.py  test_platform_paths_headers.py  test_timer_headers.py  test_ui_headers.py
tests/host_unit/: test_app_business_docs.py  test_app_business_skeleton.py  test_app_page_manager.py  test_app_portable_lvgl_ui.py  test_app_service_hal_actions.py  test_build_interactive_selection.py  test_ci_workflow.py  test_cmake_layout.py  test_development_workflow_docs.py  test_ep_package_validation.py  test_ep_static_library_export.py  test_framework_bootstrap.py  test_host_config.py  test_host_device_registry.py  test_host_event_bus.py  test_host_file.py  test_host_log.py  test_host_lvgl_demo.py  test_host_lvgl_widgets_demo.py  test_host_macos_sdl2_ui_port.py  test_host_osal_queue.py  test_host_osal_semaphore.py  test_host_osal_thread_mutex.py  test_host_osal_time_mem.py  test_host_package_script.py  test_host_platform_capability.py  test_host_platform_paths.py  test_host_posix_bootstrap.py  test_host_resource_smoke.py  test_host_timer.py  test_lvgl_prebuilt.py  test_lvgl_ui_component.py  test_multi_lang_naming.py  test_platform_hal_stubs.py  test_repo_workflow_files.py  test_repository_layout.py  test_rtos_default_devices.py  test_rtthread_hal_gpio.py  test_rtthread_hal_i2c.py  test_rtthread_hal_pwm.py  (+14 more)
tools/scripts/: _sync_sdk_pins_update_yaml.py  build_target_firmware.sh  check_target_env.sh  export_ep_package.sh  export_sdk_ep_package.sh  export_target.sh  generate_ui_fonts.py  install_target_env.sh  package_host.py  package_host.sh  prepare_target_sdk.sh  select_target.sh  sync_sdk_pins.sh  target_descriptor.sh  target_sdk_resolver.sh  validate_ep_package.sh  validate_targets.sh
(+37 files in other folders)
