add_library(ep_app STATIC
  app_core.c
  main.c
  selftest/app_selftest.c
  ui/app_ui.c
  ui/page_manager.c
  ui/pages/home_page.c
  ui/pages/settings_page.c
  services/beep_service.c
  services/lcd_sleep_service.c
  services/power_board_service.c
  services/rtc_service.c
)

target_include_directories(ep_app
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/selftest
    ${CMAKE_CURRENT_SOURCE_DIR}/services
    ${CMAKE_CURRENT_SOURCE_DIR}/ui
    ${CMAKE_CURRENT_SOURCE_DIR}/ui/pages
    ${CMAKE_SOURCE_DIR}/components/log/include
    ${CMAKE_SOURCE_DIR}/components/event/include
    ${CMAKE_SOURCE_DIR}/components/timer/include
    ${CMAKE_SOURCE_DIR}/components/recipe_parser/include
    ${CMAKE_SOURCE_DIR}/components/ui_style/include
    ${CMAKE_SOURCE_DIR}/platforms/include
    ${CMAKE_SOURCE_DIR}/hal/include
    ${CMAKE_SOURCE_DIR}/osal/include
    ${EP_LVGL_INCLUDE_DIR}
)

target_link_libraries(ep_app
  PRIVATE
    ep_components_log
    ep_components_event
    ep_components_timer
    ep_components_recipe_parser
    ep_components_ui_style
    ep_platform_api
)
